src/test/deca/codegen/valid/class_with_setter_as_constructor.deca
// Test similar to a constructor

class Person {
    float intelligence;
    int age;
    void init(float intelligence, int age) {
        this.intelligence = intelligence;
        this.age = age;
    }
}

{
    Person camille = new Person();
    camille.init(0, 45);
    println(camille.intelligence);
    println(camille.age);
}